--- a/src/app/select/select.page.scss
+++ b/src/app/select/select.page.scss
@@ -23,7 +23,7 @@
     margin-right: 5px;
     border-radius: none;
     border-bottom: 1px solid #c5c5c5;
-    color: white;
+    color: black;
 }
 
 .end {
@@ -35,8 +35,8 @@
 
 .transparent-button {
     background-color: transparent;
-    color: white;
-    border: 2px solid white;
+    color: black;
+    border: 2px solid black;
     border-radius: 14px;
     padding: 5px 10px;
 }
