--- a/src/app/select/select.page.html
+++ b/src/app/select/select.page.html
@@ -3,7 +3,7 @@
 
   <div
     style="
-      background-color: white !important;
+      background-color: black !important;
       position: relative;
       border-radius: 0 0 25px 25px;
       margin-top: 0;
@@ -13,7 +13,7 @@
       src="../../assets/images/logos nvc/300x149.png"
       style="display: block; margin: 0 auto; width: 50%"
     ></ion-img>
-    <button
+    <!-- <button
       (click)="redirectToHomePage()"
       style="
         position: absolute;
@@ -27,7 +27,7 @@
         name="arrow-back-circle-outline"
         style="color: black; scale: 1.5"
       ></ion-icon>
-    </button>
+    </button> -->
   </div>
 
   <div style="margin-top: 120px; display: flex; justify-content: space-between">
@@ -40,10 +40,10 @@
   <div
     style="display: flex; justify-content: center; margin-top: 15px; scale: 1.5"
   >
-    <ion-icon name="chevron-up-outline" style="color: white"></ion-icon>
+    <ion-icon name="chevron-up-outline" style="color: black"></ion-icon>
   </div>
   <div style="display: flex; justify-content: center; margin-top: 15px">
-    <h1 style="text-align: center; color: white">Modify the url</h1>
+    <h1 style="text-align: center; color: black">Modify the url</h1>
   </div>
   <div style="display: flex; justify-content: center; margin-top: 15px">
     <button class="transparent-button" (click)="sendModify()">Submit</button>
