--- a/src/app/select/select.page.html
+++ b/src/app/select/select.page.html
@@ -3,7 +3,7 @@
 
   <div
     style="
-      background-color: black !important;
+      background-color: rgba(32, 31, 31, 0.572);
       position: relative;
       border-radius: 0 0 25px 25px;
       margin-top: 0;
